# oramacore_lib

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
benches/: hnsw.rs  hnsw_vs_basic.rs  hnsw_vs_basic2.rs  simd_metrics.rs
src/: lib.rs
src/analytics/: mod.rs
src/bkd/: bkd.rs  mod.rs
src/casting/: enumerative.rs  mod.rs
src/data_structures/: basic.rs  basic2.rs  basic3.rs  capped_heap.rs  fst.rs  hnsw.rs  hnsw2.rs  map.rs  mod.rs  ordered_key.rs  radix.rs  vector_bruteforce.rs
src/filters/: mod.rs
src/fs/: mod.rs
src/generic_kv/: mod.rs
src/hnsw2/: NOTICE  dump.hsnw  hnsw_params.rs  mod.rs  rebuild.rs
src/hnsw2/core/: ann_index.rs  calc.rs  kmeans.rs  metrics.rs  mod.rs  neighbor.rs  node.rs  simd_metrics.rs  simd_metrics_old.rs
src/hook_storage/: mod.rs  reader.rs  writer.rs
src/nlp/: chunker.rs  locales.rs  mod.rs  stop_words.rs  tokenizer.rs
src/nlp/stop_words/: ar.txt  en.txt  it.txt  ta.txt  zh.txt
src/pin_rules/: file_util.rs  op.rs  reader.rs  types.rs  writer.rs
src/secrets/: aws.rs  cache.rs  local.rs  mod.rs
src/shelf/: mod.rs  reader.rs  writer.rs
src/shelves/: file_util.rs  op.rs  reader.rs  types.rs  writer.rs
src/values/: mod.rs  op.rs  reader.rs  types.rs  writer.rs
tests/: hnsw2_integration.rs  hsnw.rs  secrets_integration.rs
