[package]
name = "oramacore_lib"
version = "0.1.7"
edition = "2024"
license-file = "LICENSE.md"

description="Internal structures and utilities used by OramaCore. See oraama.com for more details."
homepage="https://orama.com/"
repository="https://github.com/oramasearch/oramacore_lib"

[dependencies]

tracing = "0.1"
num = "0.4.3"
fixedbitset = "0.5.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
atomic-write-file = "0.2.3"
rand = "0.9"
rayon = "1.5.1"
bincode = "1.3.3"
num-traits = "0.2.19"
fastbloom-rs = "0.5.9"
anyhow = "1.0.98"
futures = "0.3.31"
thiserror = "2.0.16"
orama-js-pool = "0.2.1"
rust-stemmers = "1.2.0"
regex = "1.11.1"
smallvec = { version = "1.13.2", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
tiktoken-rs = "0.6.0"
text-splitter = { version = "0.22", features = ["tiktoken-rs", "markdown", "code"] }
tokio = { version = "1.46.1", features = ["full"] }
fst = { version = "0.4.7", features = ["levenshtein"] }
memmap = "0.7.0"
ordered-float = "4"
parking_lot = "0.12.3"
serde-big-array = "0.5.1"
oramacore_ptrie = { version = "0.1.0", features = ["serde"] }
debug_panic = "0.2.1"
tokio-util = "0.7"
chrono = { version = "0.4" }

tempfile = { version = "3", optional = true }
pulp = "0.21.5"

[dev-dependencies]
tempfile = { version = "3" }
criterion = { version = "0.5.1", features = ["async_tokio"] }
rallo = { version = "0.5" }
approx = "0.5.1"

[features]
no_thread = []
generate_new_path = ["tempfile"]
track_allocations = []

[[bench]]
name = "simd_metrics"
harness = false

[[bench]]
name = "hnsw"
harness = false
